# memory-forensics-triage

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/iocs/: apt29.yml  apt41.yml  carbanak.yml  conti.yml  darkside.yml  equation_group.yml  fin7.yml  lazarus.yml  lockbit.yml  turla.yml
docs/: adding-new-iocs.md  architecture.md  ioc-database.md  soc-lab-bridge.md
examples/cridex/: README.md
examples/soc-lab-generated/: README.md
examples/stuxnet/: README.md
src/triage/: audit_log.py  cli.py  ioc_scanner.py  orchestrator.py  report_html.py  report_json.py  risk_scorer.py  validator.py
src/triage/plugins/: __init__.py  base.py  cmdline.py  dlllist.py  handles.py  malfind.py  modscan.py  mutantscan.py  netscan.py  netstat.py  pslist.py  psscan.py  pstree.py  svcscan.py
templates/: report.html.j2
tests/: conftest.py  test_e2e.py  test_ioc_scanner.py  test_orchestrator.py  test_risk_scorer.py
