[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-forensics-triage"
version = "1.0.0"
description = "Automated memory forensics triage tool wrapping Volatility 3"
requires-python = ">=3.11"
dependencies = [
    "volatility3>=2.0.0",
    "click>=8.0",
    "jinja2>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
triage = "triage.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
